updated structure of page. fixed nav bar on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -65,6 +65,10 @@ img {
     background-repeat: no-repeat;   
 }
 
+div.container{
+    padding-top: 50px;
+}
+
 /*-----------------------------------------------------------------------------------------------------------Parralax midpoint*/
 
 #parallax-midpoint{
@@ -132,4 +136,12 @@ img {
   color: #888;
   text-align: center;
   margin: 0;
+}
+
+div.row{
+    max-width: 100%;
+}
+a.nav-link{
+    align-content: center;
+    text-align: center;
 }
